--- a/domains/certificates/.editorconfig
+++ b/domains/certificates/.editorconfig
@@ -1,3 +1,5 @@
+root = false
+
 [*.{cs,vb}]
 dotnet_naming_rule.private_members_with_underscore.symbols = private_fields
 dotnet_naming_rule.private_members_with_underscore.style = prefix_underscore
