--- a/domains/certificates/Query.API/API/Properties/launchSettings.json
+++ b/domains/certificates/Query.API/API/Properties/launchSettings.json
@@ -19,7 +19,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "Datasync": {
-          "url": "somecoolurl"
+          "url": "http://somecoolurl:8081"
       }
     },
     "IIS Express": {
