--- a/.gitignore
+++ b/.gitignore
@@ -910,7 +910,7 @@ $RECYCLE.BIN/
 # Windows Installer files from build outputs
 
 # JetBrains Rider
-
+.idea/
 ### VisualStudio Patch ###
 # Additional files built by Visual Studio
 
