--- a/domains/certificates/Query.API/API/API.csproj
+++ b/domains/certificates/Query.API/API/API.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="EnergyOriginEventStore" Version="0.0.5" />
+    <PackageReference Include="MassTransit" Version="8.0.8" />
     <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
     <PackageReference Include="Serilog.Expressions" Version="3.4.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
