--- a/domains/certificates/Query.API/API/appsettings.Development.json
+++ b/domains/certificates/Query.API/API/appsettings.Development.json
@@ -5,6 +5,9 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
+    "ConnectionStrings": {
+        "MartenDB":  "bla"
+    },
     "MockMasterData": {
         "JsonFilePath": "MasterDataService/data.json"
     }
