--- a/domains/certificates/chart/templates/pgadmin-deployment.yaml
+++ b/domains/certificates/chart/templates/pgadmin-deployment.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.pgadmin.enabled }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -30,4 +31,4 @@ spec:
               value: {{ $value | quote }}
           {{- end}}
           {{- end}}
-
+{{- end}}
