--- a/domains/certificates/Query.API/API/appsettings.Development.json
+++ b/domains/certificates/Query.API/API/appsettings.Development.json
@@ -6,7 +6,7 @@
         }
     },
     "ConnectionStrings": {
-        "MartenDB":  "bla"
+        "MartenDB": "Host=localhost;Port=5454;Database=marten_test;Username=postgres;Password=Password12!"
     },
     "MockMasterData": {
         "JsonFilePath": "MasterDataService/data.json"
