add stuff to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# CUSTOM
+**/Chart.lock
+
 # Created by https://www.toptal.com/developers/gitignore/api/helm,rider,linux,macos,python,csharp,windows,visualstudio,visualstudiocode,jetbrains
 # Edit at https://www.toptal.com/developers/gitignore?templates=helm,rider,linux,macos,python,csharp,windows,visualstudio,visualstudiocode,jetbrains
 
