change of env var

--- a/domains/certificates/Query.API/API/appsettings.Development.json
+++ b/domains/certificates/Query.API/API/appsettings.Development.json
@@ -9,6 +9,6 @@
         "JsonFilePath": "MasterDataService/data.json"
     },
     "ConnectionStrings": {
-        "MartenDB": "PLACEHOLDER"
+        "MARTEN_CONNECTION_STRING": "MARTEN_CONNECTION_STRING"
     }
 }
