--- a/domains/certificates/chart/templates/postgres-service.yaml
+++ b/domains/certificates/chart/templates/postgres-service.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: {{ .Release.Namespace }}
 spec:
   ports:
-    - name: postgres-port
+    - name: postgres-protocol
       port: 5432
       protocol: TCP
       targetPort: 5432
