--- a/domains/certificates/chart/templates/postgres-deployment.yaml
+++ b/domains/certificates/chart/templates/postgres-deployment.yaml
@@ -36,5 +36,5 @@ spec:
           ports:
             - containerPort: 5432
               hostPort: 5432
-              name: postgres-protocol
+              name: pgsql
               protocol: TCP
