--- a/domains/certificates/Query.API/API/appsettings.Development.json
+++ b/domains/certificates/Query.API/API/appsettings.Development.json
@@ -9,6 +9,6 @@
         "JsonFilePath": "MasterDataService/data.json"
     },
     "ConnectionStrings": {
-        "MARTEN_CONNECTION_STRING": "host=host.docker.internal;Port=5432;Database=marten;username=postgres;password=postgres;"
+        "Marten": "host=localhost;Port=5432;Database=marten;username=postgres;password=postgres;"
     }
 }
