--- a/domains/certificates/Query.API/API/appsettings.Development.json
+++ b/domains/certificates/Query.API/API/appsettings.Development.json
@@ -7,5 +7,8 @@
     },
     "MockMasterData": {
         "JsonFilePath": "MasterDataService/data.json"
+    },
+    "ConnectionStrings": {
+        "Marten": "host=localhost;Port=5432;Database=marten;username=postgres;password=postgres;"
     }
 }
