according to review

--- a/domains/certificates/Query.API/API/appsettings.Development.json
+++ b/domains/certificates/Query.API/API/appsettings.Development.json
@@ -12,6 +12,6 @@
         "Marten": "host=localhost;Port=5432;Database=marten;username=postgres;password=postgres;"
     },
     "Datasync": {
-        "url": "http://somecoolurl:8081"
+        "Url": "http://somecoolurl:8081"
     }
 }
