Squashed commit of the following:
commit 45c0e2a0655e846cc96f3636eba46ac6e58df3ee
Author: Christoffer Frydkjær <christofferfk@gmail.com>
Date:   Thu Nov 17 14:18:46 2022 +0100

    bump version

commit 36460db3493e312054ea9062b335a97a8f00f94a
Author: Christoffer Frydkjær <christofferfk@gmail.com>
Date:   Thu Nov 17 14:14:38 2022 +0100

    added tests

commit 75a0422f141c40793128458a2fc18695e0ffde82
Author: Christoffer Frydkjær <christofferfk@gmail.com>
Date:   Wed Nov 16 13:25:12 2022 +0100

    unused class

commit f39f3dbd481182463bdf405ee94e71bc5a94e197
Author: Christoffer Frydkjær <christofferfk@gmail.com>
Date:   Wed Nov 16 12:12:57 2022 +0100

    according to review

commit fa4ac1dc2ad811bb1a21a6f05ffe7d290b61f68a
Merge: eb68eaf 6507409
Author: Christoffer Frydkjær <cfk@christoffersmbp.lan>
Date:   Wed Nov 16 11:37:20 2022 +0100

    Merge branch 'main' into preview/datasync-impl

commit eb68eafa1497c311e71f89061a43489a9c1782c9
Merge: 4515190 367a3d3
Author: Christoffer Frydkjær <christofferfk@gmail.com>
Date:   Wed Nov 9 15:44:04 2022 +0100

    Merge branch 'main' into preview/datasync-impl

commit 4515190ecae6cd4b74c659b839bbecfd45e87e2a
Author: Christoffer Frydkjær <christofferfk@gmail.com>
Date:   Wed Nov 9 15:39:44 2022 +0100

    remove unused using statements

commit cec7bb8bfd7d09c07177ece0f3dcc41e421bfff2
Author: Christoffer Frydkjær <christofferfk@gmail.com>
Date:   Wed Nov 9 15:01:29 2022 +0100

    fix periods

commit cf75a8aa22ff1a2353452589902c5e55f3fe7380
Author: Christoffer Frydkjær <christofferfk@gmail.com>
Date:   Tue Nov 8 13:36:27 2022 +0100

    env var

commit 6cd99faefd536cc19ef87399cf9df3be95015020
Author: Christoffer Frydkjær <christofferfk@gmail.com>
Date:   Tue Nov 8 13:12:02 2022 +0100

    thorw exception

commit b948dbed77e1d3d63314d30df4eea2fe5bdf776b
Author: Christoffer Frydkjær <christofferfk@gmail.com>
Date:   Tue Nov 8 12:54:47 2022 +0100

    add url

commit c49069d82f7bdc5b04a458ddb8f1919aa80de650
Author: Christoffer Fry

--- a/domains/certificates/Query.API/API/appsettings.Development.json
+++ b/domains/certificates/Query.API/API/appsettings.Development.json
@@ -10,5 +10,8 @@
     },
     "ConnectionStrings": {
         "Marten": "host=localhost;Port=5432;Database=marten;username=postgres;password=postgres;"
+    },
+    "Datasync": {
+        "Url": "http://somecoolurl:8081"
     }
 }
