--- a/domains/certificates/chart/values.yaml
+++ b/domains/certificates/chart/values.yaml
@@ -1,6 +1,9 @@
 api:
   replicaCount: 1
   image: {}
+  env:
+    MOCKMASTERDATA__JSONFILEPATH:
+    DATASYNC__URL:
 postgres:
   replicaCount: 1
   image:
