--- a/domains/certificates/Query.API/API/API.csproj
+++ b/domains/certificates/Query.API/API/API.csproj
@@ -34,4 +34,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="MasterDataService\AuthService\" />
+  </ItemGroup>
+
 </Project>
