--- a/domains/certificates/Query.API/API/appsettings.Development.json
+++ b/domains/certificates/Query.API/API/appsettings.Development.json
@@ -13,6 +13,6 @@
         "AuthServiceUrl": "http://eo-auth"
     },
     "Datasync": {
-        "Url": "http://somecoolurl:8081"
+        "Url": "http://data-sync-api"
     }
 }
