--- a/domains/certificates/Query.API/API/appsettings.Development.json
+++ b/domains/certificates/Query.API/API/appsettings.Development.json
@@ -9,7 +9,7 @@
         "Marten": "host=localhost;Port=5432;Database=marten;username=postgres;password=postgres;"
     },
     "MockMasterData": {
-        "JsonFilePath": "MasterDataService/data.json",
+        "JsonFilePath": "MasterDataService/MockInput/data.json",
         "AuthServiceUrl": "http://eo-auth"
     },
     "Datasync": {
