--- a/domains/certificates/Query.API/API/appsettings.Development.json
+++ b/domains/certificates/Query.API/API/appsettings.Development.json
@@ -5,13 +5,14 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "MockMasterData": {
-        "JsonFilePath": "MasterDataService/data.json"
-    },
     "ConnectionStrings": {
         "Marten": "host=localhost;Port=5432;Database=marten;username=postgres;password=postgres;"
     },
+    "MockMasterData": {
+        "JsonFilePath": "MasterDataService/MockInput/data.json",
+        "AuthServiceUrl": "http://eo-auth"
+    },
     "Datasync": {
-        "Url": "http://somecoolurl:8081"
+        "Url": "http://data-sync-api"
     }
 }
