--- a/domains/certificates/chart/templates/postgres-deployment.yaml
+++ b/domains/certificates/chart/templates/postgres-deployment.yaml
@@ -32,10 +32,16 @@ spec:
             initialDelaySeconds: 2
             periodSeconds: 2
           livenessProbe:
-            tcpSocket:
-              port: 5432
-            initialDelaySeconds: 2
-            periodSeconds: 2
+            failureThreshold: 6
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 5
+            exec:
+              command:
+                - /bin/sh
+                - -c
+                - exec pg_isready -U "postgres" -h 127.0.0.1 -p 5432
           ports:
             - containerPort: 5432
               hostPort: 5432
