--- a/domains/certificates/chart/values.yaml
+++ b/domains/certificates/chart/values.yaml
@@ -6,3 +6,8 @@ postgres:
   image:
     name: sibedge/postgres-plv8
     tag: 15.0-3.1.4-alpine
+
+postgresql:
+  primary:
+    persistence:
+      size: 10Gi
