--- a/domains/certificates/chart/templates/postgres-statefulset.yaml
+++ b/domains/certificates/chart/templates/postgres-statefulset.yaml
@@ -46,9 +46,9 @@ spec:
           volumeMounts:
             - name: dshm
               mountPath: /dev/shm
-            - name: postgres-vm
-              mountPath: /docker-entrypoint-initdb.d/
-              readOnly: true
+            #- name: postgres-vm
+            #  mountPath: /docker-entrypoint-initdb.d/
+            #  readOnly: true
       volumes:
         - name: dshm
           emptyDir:
