--- a/domains/certificates/chart/templates/postgres-statefulset.yaml
+++ b/domains/certificates/chart/templates/postgres-statefulset.yaml
@@ -58,10 +58,11 @@ spec:
             name: postgres-init-cm
   volumeClaimTemplates:
     - metadata:
-        name: data
+        name: dshm
       spec:
         accessModes:
           - "ReadWriteOnce"
+        storageClassName: "postgres-persistent-volume-claim"
         resources:
           requests:
             storage: {{ .Values.postgres.size }}
