--- a/domains/certificates/chart/templates/postgres-statefulset.yaml
+++ b/domains/certificates/chart/templates/postgres-statefulset.yaml
@@ -44,25 +44,24 @@ spec:
                 - -c
                 - exec pg_isready -U "postgres" -h 127.0.0.1 -p 5432
           volumeMounts:
-            - name: dshm
-              mountPath: /dev/shm
+            - name: postgres-pvc
+              mountPath: /var/lib/postgresql/data
             - name: postgres-vm
               mountPath: /docker-entrypoint-initdb.d/
               readOnly: true
       volumes:
-        - name: dshm
-          emptyDir:
-            medium: Memory
+        - name: postgres-pvc
+          persistentVolumeClaim:
+            claimName: postgres-pvc
         - name: postgres-vm
           configMap:
             name: postgres-init-cm
   volumeClaimTemplates:
     - metadata:
-        name: dshm
+        name: postgres-pvc
       spec:
         accessModes:
           - "ReadWriteOnce"
-        storageClassName: "postgres-persistent-volume-claim"
         resources:
           requests:
             storage: {{ .Values.postgres.size }}
