--- a/domains/certificates/chart/templates/postgres-statefulset.yaml
+++ b/domains/certificates/chart/templates/postgres-statefulset.yaml
@@ -22,6 +22,8 @@ spec:
       containers:
         - name: {{ .Release.Name }}-postgres
           image: '{{ .Values.postgres.image.name }}:{{ .Values.postgres.image.tag}}'
+          env:
+            PGDATA: /var/lib/postgresql/data/pgdata
           ports:
             - containerPort: 5432
               hostPort: 5432
