--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,5 +2,6 @@
     "recommendations": [
         "EditorConfig.EditorConfig",
         "redhat.vscode-yaml",
+        "hediet.vscode-drawio",
     ]
 }
