--- a/domains/certificates/Query.API/API.AppTests/API.AppTests.csproj
+++ b/domains/certificates/Query.API/API.AppTests/API.AppTests.csproj
@@ -9,8 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="6.8.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.10" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+    <PackageReference Include="Testcontainers" Version="2.2.0" />
     <PackageReference Include="Verify.Xunit" Version="17.10.2" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
