--- a/.github/workflows/build-domain.yaml
+++ b/.github/workflows/build-domain.yaml
@@ -215,7 +215,7 @@ jobs:
           PR: ${{ github.event.pull_request.number }}
         run: |
           output="$DOMAIN/chart/values.yaml"
-          printf '%s' "$PROJECTS" | jq -r '.[]' | while read project; do
+          printf '%s' "$PROJECTS" | jq -r '.[]' | grep ^$DOMAIN | while read project; do
               input="$project/../chart-overrides.yaml"
               value=$(yaml-get --query version "$input")
               value=$(sh ./.github/tooling/semver.sh "$value" "$PR")
