--- a/domains/certificates/docker-test-env/docker-compose.yml
+++ b/domains/certificates/docker-test-env/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       - "5050:80"
     volumes:
       - pgadmin:/var/lib/pgadmin
+      - ./servers.json:/pgadmin4/servers.json
     networks:
       - postgres
     environment:
