--- a/.github/workflows/sonar-analysis.yml
+++ b/.github/workflows/sonar-analysis.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       SOLUTION_NAME: "energinet-datahub_eo-certificates"
-      SOLUTION_PATH: "domains/certificates/Query.API"
+      SOLUTION_PATH: "domains/certificates"
       DOTNET_VERSION: "6.0.302"
 
     steps:
