--- a/.github/workflows/sonar-analysis.yml
+++ b/.github/workflows/sonar-analysis.yml
@@ -48,5 +48,5 @@ jobs:
         run: |
           dotnet sonarscanner begin -k:"${{ env.SOLUTION_NAME }}" -o:"${{ env.ORGANIZATION }}" -d:sonar.login="${{ secrets.SONAR_TOKEN }}" -d:sonar.host.url="https://sonarcloud.io"
           dotnet build
-#          dotnet test --collect "Code Coverage"
+          dotnet test --collect "Code Coverage"
           dotnet sonarscanner end -d:sonar.login="${{ secrets.SONAR_TOKEN }}"
