--- a/.github/workflows/build-domain.yaml
+++ b/.github/workflows/build-domain.yaml
@@ -93,27 +93,12 @@ jobs:
 
           if [ -z "$pattern" ]; then
             echo 'Relevance pattern is empty, emitting empty matrices.'
-            echo '::set-output name=domains::[]'
-            echo '::set-output name=projects::[]'
+            printf "domains=[]\n" >> "$GITHUB_OUTPUT"
+            printf "projects=[]\n" >> "$GITHUB_OUTPUT"
             exit 0
           fi
 
           matrix=$(find domains -mindepth 1 -maxdepth 1 -type d | egrep "$pattern" | while read domain; do
-            projects=$(find "$domain" -mindepth 3 -maxdepth 3 -name "*.csproj" -exec dirname {} \; | egrep -v '[^\/]*/[^\/]*/Shared/[^\/]*' | egrep -v 'Tests$' | while read directory; do printf '"%s"' "$directory"; done | jq -sc '.')
-            printf '{"domain":"%s","projects":%s}' "$domain" "$projects"
-          done | jq -sc '.')
-
-          echo '::group::Matrix'
-          echo "$matrix" | jq -r '.'
-          echo '::endgroup::'
-
-          domains=$(printf "$matrix" | jq -cr '[.[].domain] | unique')
-          echo "::set-output name=domains::${domains}"
-
-          projects=$(printf "$matrix" | jq '.[].projects[]' | jq -scr '. | unique')
-          echo "::set-output name=projects::${projects}"
-
-          new=$(find domains -mindepth 1 -maxdepth 1 -type d | egrep "$pattern" | while read domain; do
             [ -f "$domain/.domain.json" ] || echo "{}" > "$domain/.domain.json"
             echo '{"draft": false}' > "$domain/.default.domain.json"
             settings=$(jq -srec '.[0] * .[1] | .path=$path' --arg path "$domain" "$domain/.default.domain.json" "$domain/.domain.json")
@@ -124,12 +109,15 @@ jobs:
             printf '{"domain":%s,"projects":%s}' "$settings" "$projects"
           done | jq -sc '.')
 
-          echo '::group::New'
-          echo "$new" | jq -r '.'
+          echo '::group::Matrix'
+          echo "$matrix" | jq -r '.'
           echo '::endgroup::'
 
-          exit 1
-          # printf "pattern=%s\n" "$PATTERN" >> "$GITHUB_OUTPUT"
+          domains=$(printf "$matrix" | jq -cr '[.[].domain] | unique')
+          printf "domains=%s\n" "$domains" >> "$GITHUB_OUTPUT"
+
+          projects=$(printf "$matrix" | jq '.[].projects[]' | jq -scr '. | unique')
+          printf "projects=%s\n" "$projects" >> "$GITHUB_OUTPUT"
 
       - name: Relevant domains
         shell: bash
@@ -165,7 +153,7 @@ jobs:
         shell: bash
         id: resolver
         env:
-          PROJECT: ${{ matrix.build }}
+          PROJECT: ${{ matrix.build.path }}
           PR: ${{ github.event.pull_request.number }}
         run: |
           docker="$PROJECT/Dockerfile"
@@ -196,6 +184,7 @@ jobs:
           image-name: ${{ steps.resolver.outputs.name }}
           image-tag: ${{ steps.resolver.outputs.version }}
           docker-context: ${{ steps.resolver.outputs.domain }}
+          dry_run: ${{ matrix.build.draft }}
 
   build-chart:
     name: Build chart
@@ -216,7 +205,7 @@ jobs:
         shell: bash
         id: resolve-paths
         env:
-          DOMAIN: ${{ matrix.build }}
+          DOMAIN: ${{ matrix.build.path }}
         run: |
           chart="$DOMAIN/chart"
           echo "domain=${DOMAIN}" >> $GITHUB_OUTPUT
@@ -260,6 +249,7 @@ jobs:
           chart_version: ${{ steps.resolve-chart.outputs.semver }}
           include_image_name: true
           deploy_key: ${{ secrets.DEPLOY_KEY_HELM_CHARTS }}
+          dry_run: ${{ matrix.build.draft }}
 
   update-environment:
     name: Update environment
@@ -279,7 +269,7 @@ jobs:
         shell: bash
         id: resolve-paths
         env:
-          DOMAIN: ${{ matrix.build }}
+          DOMAIN: ${{ matrix.build.path }}
         run: |
           chart="$DOMAIN/chart"
           echo "chart=${chart}" >> $GITHUB_OUTPUT
@@ -308,3 +298,4 @@ jobs:
           chart_name: ${{ steps.chart-info.outputs.chart-name }}
           chart_version: ${{ steps.resolve-chart.outputs.semver }}
           deploy_key: ${{ secrets.DEPLOY_KEY_BASE_ENVIRONMENT }}
+          dry_run: ${{ matrix.build.draft }}
