--- a/.github/actions/helm-release-chart/action.yml
+++ b/.github/actions/helm-release-chart/action.yml
@@ -74,7 +74,7 @@ runs:
 
     - name: Create Release
       id: create_release
-      if: ${{ input.dry_run != 'true' }}
+      if: ${{ inputs.dry_run != 'true' }}
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ github.token }}
@@ -86,7 +86,7 @@ runs:
 
     - name: Add chart.tar to release
       id: upload-release-asset
-      if: ${{ input.dry_run != 'true' }}
+      if: ${{ inputs.dry_run != 'true' }}
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ github.token }}
@@ -97,7 +97,7 @@ runs:
         asset_content_type: application/zip
 
     - name: Checkout chart repository
-      if: ${{ input.dry_run != 'true' }}
+      if: ${{ inputs.dry_run != 'true' }}
       uses: actions/checkout@v3
       with:
         path: ${{ env.helm-checkout-directory }}
@@ -106,7 +106,7 @@ runs:
         ref: ${{ inputs.chart_repository_branch }}
 
     - name: Download chart tarball
-      if: ${{ input.dry_run != 'true' }}
+      if: ${{ inputs.dry_run != 'true' }}
       shell: bash
       working-directory: ${{ env.helm-checkout-directory }}
       env:
@@ -115,13 +115,13 @@ runs:
         gh release download '${{ steps.chart-info.outputs.tag-name }}' --repo '${{ github.repository }}' --pattern '${{ steps.generate_filename.outputs.filename }}' --dir './'
 
     - name: Update index file for helm registry
-      if: ${{ input.dry_run != 'true' }}
+      if: ${{ inputs.dry_run != 'true' }}
       shell: bash
       working-directory: ${{ env.helm-checkout-directory }}
       run: helm repo index .
 
     - name: Commit changes
-      if: ${{ input.dry_run != 'true' }}
+      if: ${{ inputs.dry_run != 'true' }}
       id: commit
       uses: EndBug/add-and-commit@v9
       with:
@@ -134,7 +134,7 @@ runs:
 
     - name: Verify changes were pushed
       shell: bash
-      if: ${{ input.dry_run != 'true' }} && ${{ steps.commit.outputs.pushed == 'false' }}
+      if: ${{ inputs.dry_run != 'true' }} && ${{ steps.commit.outputs.pushed == 'false' }}
       run: |
         echo "::error::Nothing was committed or pushed"
         exit 1
