--- a/.github/actions/update-base-environment/action.yaml
+++ b/.github/actions/update-base-environment/action.yaml
@@ -82,7 +82,7 @@ runs:
 
     - name: Verify changes were pushed
       shell: bash
-      if: ${{ inputs.dry_run == 'false' }} && ${{ steps.commit.outputs.pushed == 'false' }}
+      if: ${{ inputs.dry_run == 'false' && steps.commit.outputs.pushed == 'false' }}
       run: |
         echo "::error::Nothing was committed or pushed"
         exit 1
