--- a/.github/workflows/build-domain.yaml
+++ b/.github/workflows/build-domain.yaml
@@ -93,14 +93,20 @@ jobs:
 
           if [ -z "$pattern" ]; then
             echo 'Relevance pattern is empty, emitting empty matrices.'
-            echo '::set-output name=domains::[]'
-            echo '::set-output name=projects::[]'
+            printf "domains=[]\n" >> "$GITHUB_OUTPUT"
+            printf "projects=[]\n" >> "$GITHUB_OUTPUT"
             exit 0
           fi
 
           matrix=$(find domains -mindepth 1 -maxdepth 1 -type d | egrep "$pattern" | while read domain; do
-            projects=$(find "$domain" -mindepth 3 -maxdepth 3 -name "*.csproj" -exec dirname {} \; | egrep -v '[^\/]*/[^\/]*/Shared/[^\/]*' | egrep -v 'Tests$' | while read directory; do printf '"%s"' "$directory"; done | jq -sc '.')
-            printf '{"domain":"%s","projects":%s}' "$domain" "$projects"
+            [ -f "$domain/.domain.json" ] || echo "{}" > "$domain/.domain.json"
+            echo '{"draft": false}' > "$domain/.default.domain.json"
+            settings=$(jq -srec '.[0] * .[1] | .path=$path' --arg path "$domain" "$domain/.default.domain.json" "$domain/.domain.json")
+
+            draft=$(printf '%s' "$settings" | jq -rce '.draft')
+            projects=$(find "$domain" -mindepth 3 -maxdepth 3 -name "*.csproj" -exec dirname {} \; | egrep -v '[^\/]*/[^\/]*/Shared/[^\/]*' | egrep -v 'Tests$' | while read directory; do printf '{"path":"%s","draft":"%s"}' "$directory" "$draft"; done | jq -sc '.')
+
+            printf '{"domain":%s,"projects":%s}' "$settings" "$projects"
           done | jq -sc '.')
 
           echo '::group::Matrix'
@@ -108,10 +114,10 @@ jobs:
           echo '::endgroup::'
 
           domains=$(printf "$matrix" | jq -cr '[.[].domain] | unique')
-          echo "::set-output name=domains::${domains}"
+          printf "domains=%s\n" "$domains" >> "$GITHUB_OUTPUT"
 
           projects=$(printf "$matrix" | jq '.[].projects[]' | jq -scr '. | unique')
-          echo "::set-output name=projects::${projects}"
+          printf "projects=%s\n" "$projects" >> "$GITHUB_OUTPUT"
 
       - name: Relevant domains
         shell: bash
@@ -147,7 +153,7 @@ jobs:
         shell: bash
         id: resolver
         env:
-          PROJECT: ${{ matrix.build }}
+          PROJECT: ${{ matrix.build.path }}
           PR: ${{ github.event.pull_request.number }}
         run: |
           docker="$PROJECT/Dockerfile"
@@ -178,6 +184,7 @@ jobs:
           image-name: ${{ steps.resolver.outputs.name }}
           image-tag: ${{ steps.resolver.outputs.version }}
           docker-context: ${{ steps.resolver.outputs.domain }}
+          dry-run: ${{ matrix.build.draft }}
 
   build-chart:
     name: Build chart
@@ -198,7 +205,7 @@ jobs:
         shell: bash
         id: resolve-paths
         env:
-          DOMAIN: ${{ matrix.build }}
+          DOMAIN: ${{ matrix.build.path }}
         run: |
           chart="$DOMAIN/chart"
           echo "domain=${DOMAIN}" >> $GITHUB_OUTPUT
@@ -215,7 +222,7 @@ jobs:
           PR: ${{ github.event.pull_request.number }}
         run: |
           output="$DOMAIN/chart/values.yaml"
-          printf '%s' "$PROJECTS" | jq -r '.[]' | grep ^$DOMAIN | while read project; do
+          printf '%s' "$PROJECTS" | jq -r '.[].path' | grep ^$DOMAIN | while read project; do
               input="$project/../chart-overrides.yaml"
               value=$(yaml-get --query version "$input")
               value=$(sh ./.github/tooling/semver.sh "$value" "$PR")
@@ -242,6 +249,7 @@ jobs:
           chart_version: ${{ steps.resolve-chart.outputs.semver }}
           include_image_name: true
           deploy_key: ${{ secrets.DEPLOY_KEY_HELM_CHARTS }}
+          dry_run: ${{ matrix.build.draft }}
 
   update-environment:
     name: Update environment
@@ -261,7 +269,7 @@ jobs:
         shell: bash
         id: resolve-paths
         env:
-          DOMAIN: ${{ matrix.build }}
+          DOMAIN: ${{ matrix.build.path }}
         run: |
           chart="$DOMAIN/chart"
           echo "chart=${chart}" >> $GITHUB_OUTPUT
@@ -290,3 +298,4 @@ jobs:
           chart_name: ${{ steps.chart-info.outputs.chart-name }}
           chart_version: ${{ steps.resolve-chart.outputs.semver }}
           deploy_key: ${{ secrets.DEPLOY_KEY_BASE_ENVIRONMENT }}
+          dry_run: ${{ matrix.build.draft }}
