--- a/.github/workflows/check-versions.yml
+++ b/.github/workflows/check-versions.yml
@@ -26,16 +26,11 @@ jobs:
 
       - name: Find relevant version checks
         id: define-matrix
+        if: ${{ steps.diff.outputs.pattern != '' }}
         shell: bash
         env:
           PATTERN: ${{ steps.diff.outputs.pattern }}
         run: |
-          if [ -z "$PATTERN" ]; then
-            echo 'Relevance pattern is empty, emitting empty matrix.'
-            echo '::set-output name=matrix::[]'
-            exit 0
-          fi
-
           matrix=$(find domains libraries/dotnet -name ".check-versions.json" | egrep "$PATTERN" | while read file; do tr -d '\n' < "$file"; done | jq -sc '. | flatten')
 
           echo "::set-output name=matrix::${matrix}"
